// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`context > provider should mount correctly 1`] = `
<form
  id="form"
>
  <input
    id="fname-input"
    value=""
  />
  <input
    id="lname-input"
    value=""
  />
</form>
`;

exports[`context > validation error on blur field 1`] = `
<form
  id="form"
>
  <input
    id="fname-input"
    value=""
  />
  <input
    id="lname-input"
    value=""
  />
</form>
`;

exports[`context > validation error on form submit 1`] = `
<form
  id="form"
>
  <input
    id="fname-input"
    value="Nick"
  />
  <input
    id="lname-input"
    value=""
  />
</form>
`;

exports[`context > validation success on form submit 1`] = `
<form
  id="form"
>
  <input
    id="fname-input"
    value="Nick"
  />
  <input
    id="lname-input"
    value="Fury"
  />
</form>
`;
